# alphakit

./: .gitignore  AGENTS.md  Makefile  alphakit.code-workspace  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  vectorized-optimization-results-mes-tradovate-kama-ema-const-pickled.pkl  vectorized-optimization-results-mes-tradovate-kama-pickled.pkl  vectorized-optimization-results-mes-tradovate-pickled.pkl
.claude/: settings.json
apps/backtester/: .gitignore  Makefile  OPTIMIZATION_RESEARCH_PLAN.md  PROP_FIRM_PLAN.md  pyproject.toml  readme.md
apps/backtester/src/backtester/: ARCHITECTURE.md  backtest_runner.py  exchange_config.py  indicators.py  market.py  middleware.py  portfolio.py  rebalancer.py
apps/backtester/src/backtester/exchange/: __init__.py  balance.py  core.py  event_log.py  order.py  position.py  symbol_config.py  types.py
apps/backtester/src/backtester/performance/: README.md  __init__.py  analyzer.py  charts.py  metrics.py  report_html.py
apps/backtester/src/backtester/strategies/: __init__.py  base.py  bollinger_mean_reversion.py  bollinger_vwap_breakout.py  donchian_breakout.py  keltner_vwap_breakout.py  ma_crossover.py  macd_mean_reversion.py  opening_range_breakout.py  pairs_mean_reversion.py  pullback_to_ma.py  regime_gated.py  sr_psych_level_breakout.py  supertrend_flip.py  vwap_mean_reversion.py
apps/backtester/src/data_aggregator/: binance_aggregator.py  databento_aggregator.py  kraken_aggregator.py  mongo_timescale_aggregator.py
apps/backtester/src/utils/: dict_utils.py  number_utils.py  time_utils.py
apps/backtester/tests/: conftest.py  test_analyzer.py  test_backtester_golden.py  test_backtester_golden_integration.py  test_backtester_golden_mixed.py  test_backtester_golden_short.py  test_balance.py  test_bollinger_mean_reversion.py  test_bollinger_vwap_breakout.py  test_databento_aggregator.py  test_donchian_breakout.py  test_event_log.py  test_futures_point_value.py  test_indicators.py  test_keltner_vwap_breakout.py  test_ma_crossover_atr.py  test_macd_mean_reversion.py  test_merge_reports.py  test_metrics.py  test_middleware.py  test_mongo_timescale_aggregator.py  test_opening_range_breakout.py  test_orders.py  test_pairs_mean_reversion.py  test_positions.py  test_pullback_to_ma.py  test_rebalancer.py  test_regime_gated.py  test_report_html.py  test_sr_psych_level_breakout.py  test_supertrend_flip.py  test_symbol_config.py  test_vwap_mean_reversion.py
apps/trading-system-backend/: .env.example  package.json  tsconfig.json
apps/trading-system-backend/scripts/: backfill-point-values.ts  migrate-instruments-resolutions.ts  migrate-timescale.ts  seed-calendars.ts  seed-mes-instrument.ts  seed-user.ts
apps/trading-system-backend/src/: env.ts  index.ts  shutdown.test.ts  shutdown.ts
apps/trading-system-ui/: package.json  tsconfig.json  vite.config.ts
apps/trading-system-ui/src/: App.tsx  main.tsx
infra/: docker-compose.yml
infra/mongo/docker-entrypoint-initdb.d/: createdb.sh
notebooks/: 22_signals_merged_report_original.ipynb  arbitrage_in_backtester.ipynb  binance_arbitrage_test.ipynb  cointegration_test.ipynb  data_aggregator.ipynb  ib_portfolio_test.ipynb  test_backtester.ipynb  test_backtester_mes_tradovate.ipynb  vectorized_backtest.ipynb
notebooks/cross_exchange_kraken_coinbase/: arbitrage_perps.ipynb
notebooks/kraken/: kraken_arbitrage_in_backtester.ipynb  kraken_arbitrage_test.ipynb  kraken_data_aggregator.ipynb
notebooks/pipelines/breakout/: bollinger_mean_reversion_m2k_30m.ipynb  bollinger_mean_reversion_mes_1h.ipynb  bollinger_mean_reversion_mes_30m.ipynb  bollinger_mean_reversion_mnq_1h.ipynb  bollinger_mean_reversion_mnq_30m.ipynb  bollinger_mean_reversion_mnq_5m.ipynb  bollinger_mean_reversion_short_mes_30m.ipynb  bollinger_mean_reversion_short_mnq_30m.ipynb  bollinger_vwap_breakout_mes.ipynb  bollinger_vwap_breakout_mes_15m.ipynb  bollinger_vwap_breakout_mnq_15m.ipynb  combination.ipynb  donchian_breakout_m2k_15m.ipynb  donchian_breakout_mes.ipynb  donchian_breakout_mnq_15m.ipynb  keltner_channel_breakout_long_m2k_15m.ipynb  keltner_vwap_breakout_mes.ipynb  (+14 more)
(+100 files in other folders)
