[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "backtester"
version = "0.1.0"
description = "alphakit — minimal quant alpha research & production toolkit"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Nick Surmanidze" }]

dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26",
  "pyarrow>=15.0",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "numba>=0.59",
  "pandas-market-calendars>=4.4",
  "typer>=0.12",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "prometheus-client>=0.20",
  "structlog>=24.1",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pymongo>=4.8",
  "python-dateutil>=2.9",
  "pandas-stubs>=2.3.0.250703",
  "plotly>=6.2.0",
  "pandas-ta>=0.3.14b0",
  "finta>=1.3",
  "polars-lts-cpu>=1.33.1",
  "requests>=2.32.4",
  "types-requests>=2.32.4.20250913",
  "multiprocess>=0.70.18",
  "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-benchmark>=4.0",
  "hypothesis>=6.105",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "types-python-dateutil",
  "jupyter>=1.0",
  "matplotlib>=3.9",
  "ipykernel>=6.29"
]
orchestration = [
  "prefect>=2.18",
  # Or Airflow:
  # "apache-airflow>=2.9 ; sys_platform != 'win32'"
]
distributed = [
  "ray>=2.9",
  # Or Dask:
  # "dask[dataframe]>=2024.5.0",
  # "distributed>=2024.5.0",
]
polars = ["polars>=1.5.0"]

[project.urls]
Homepage = "https://github.com/NickSurmanidze/AlphaKit"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["data/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "PL"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
# Notebooks: suppress style/complexity rules that are noisy in exploratory code.
# F401/F841 = unused imports/vars (common in cells), F541 = f-string w/o placeholder,
# E402 = import not at top of cell, E703 = trailing semicolons, B905 = zip strict=,
# PLR* = pylint complexity rules.
"notebooks/**" = [
    "E501", "E402", "E701", "E702", "E703",
    "F401", "F541", "F811", "F841",
    "I001", "B905",
    "PLR0124", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLR5501", "PLW2901",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_generics = false
disallow_subclassing_any = true
no_implicit_optional = false
plugins = ["pydantic.mypy"]
mypy_path = "src"
disable_error_code = ["no-untyped-def", "no-untyped-call"]

[tool.mypy-tests]
disallow_untyped_defs = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backtester", "src/data_aggregator", "src/utils"]

[tool.hatch.build.targets.sdist]
include = ["src/backtester", "src/data_aggregator", "src/utils", "README.md", "LICENSE", "pyproject.toml"]

#-- IGNORE --- this settings will discover packages under src/ directory so we can import them directly
# need to run "uv pip install -e ." to discover and install packages
[tool.setuptools.packages.find]
where = ["src"]
